--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
       }
 
       /* Prevent horizontal overflow on mobile */
-      html, body {
+      html,
+      body {
         overflow-x: hidden;
         max-width: 100vw;
       }
@@ -102,7 +103,9 @@
       }
     </style>
   </head>
-  <body class="antialiased relative overflow-x-hidden min-w-0 w-full max-w-full">
+  <body
+    class="antialiased relative overflow-x-hidden min-w-0 w-full max-w-full"
+  >
     <!-- Decorative Blobs -->
     <div
       class="blob bg-blue-600 w-64 h-64 rounded-full top-0 left-0 -translate-x-1/2 -translate-y-1/2"
@@ -116,9 +119,12 @@
       class="fixed w-full z-50 top-0 start-0 border-b border-slate-800 bg-dark/80 backdrop-blur-md"
     >
       <div
-        class="max-w-6xl flex flex-wrap items-center justify-between mx-auto px-3 py-4 sm:px-4"
+        class="max-w-7xl flex flex-wrap items-center justify-between mx-auto px-3 py-4 sm:px-4"
       >
-        <a href="#" class="flex items-center space-x-2 rtl:space-x-reverse flex-shrink-0">
+        <a
+          href="#"
+          class="flex items-center space-x-2 rtl:space-x-reverse flex-shrink-0"
+        >
           <span
             class="self-center text-lg sm:text-xl md:text-2xl font-bold text-white"
             >nandaydas<span class="text-primary">.in</span></span
@@ -253,7 +259,7 @@
       class="min-h-screen flex items-center justify-center pt-16"
     >
       <div
-        class="container mx-auto px-4 sm:px-6 max-w-6xl flex flex-col-reverse lg:flex-row items-center w-full"
+        class="container mx-auto px-4 sm:px-6 max-w-7xl flex flex-col-reverse lg:flex-row items-center w-full"
       >
         <div class="w-full lg:w-1/2 text-center lg:text-left mt-10 lg:mt-0">
           <span
@@ -325,7 +331,7 @@
 
     <!-- About Section -->
     <section id="about" class="py-12 md:py-20 bg-darker/50">
-      <div class="container mx-auto px-3 sm:px-6 max-w-6xl">
+      <div class="container mx-auto px-3 sm:px-6 max-w-7xl">
         <div class="flex flex-col lg:flex-row gap-8 md:gap-12 items-center">
           <div class="w-full lg:w-1/2">
             <img
@@ -373,7 +379,7 @@
 
     <!-- Skills Section -->
     <section id="skills" class="py-12 md:py-20">
-      <div class="container mx-auto px-3 sm:px-6 max-w-6xl">
+      <div class="container mx-auto px-3 sm:px-6 max-w-7xl">
         <div class="text-center mb-10 md:mb-16">
           <h2 class="text-3xl font-bold text-white mb-4">Technical Skills</h2>
           <p class="text-slate-400 max-w-2xl mx-auto">
@@ -385,45 +391,67 @@
         <!-- Skills Categories -->
         <div class="flex flex-wrap justify-center gap-8">
           <!-- Mobile Development -->
-          <div class="bg-card p-6 rounded-xl border border-slate-700 hover:border-primary/50 transition-all w-full md:w-[calc(50%-1rem)] lg:w-[calc(33.33%-1.34rem)]">
+          <div
+            class="bg-card p-6 rounded-xl border border-slate-700 hover:border-primary/50 transition-all w-full md:w-[calc(50%-1rem)] lg:w-[calc(33.33%-1.34rem)]"
+          >
             <div class="flex items-center mb-4">
-              <div class="w-12 h-12 bg-primary/20 rounded-lg flex items-center justify-center mr-4">
+              <div
+                class="w-12 h-12 bg-primary/20 rounded-lg flex items-center justify-center mr-4"
+              >
                 <i class="fab fa-android text-primary text-xl"></i>
               </div>
-              <h3 class="text-lg sm:text-xl font-bold text-white">Mobile Development</h3>
+              <h3 class="text-lg sm:text-xl font-bold text-white">
+                Mobile Development
+              </h3>
             </div>
             <div class="space-y-3">
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">Flutter</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 95%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 95%"
+                  ></div>
                 </div>
               </div>
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">Dart</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 95%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 95%"
+                  ></div>
                 </div>
               </div>
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">Android SDK</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 80%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 80%"
+                  ></div>
                 </div>
               </div>
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">iOS Development</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 75%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 75%"
+                  ></div>
                 </div>
               </div>
             </div>
           </div>
 
           <!-- Web Development -->
-          <div class="bg-card p-6 rounded-xl border border-slate-700 hover:border-primary/50 transition-all w-full md:w-[calc(50%-1rem)] lg:w-[calc(33.33%-1.34rem)]">
+          <div
+            class="bg-card p-6 rounded-xl border border-slate-700 hover:border-primary/50 transition-all w-full md:w-[calc(50%-1rem)] lg:w-[calc(33.33%-1.34rem)]"
+          >
             <div class="flex items-center mb-4">
-              <div class="w-12 h-12 bg-primary/20 rounded-lg flex items-center justify-center mr-4">
+              <div
+                class="w-12 h-12 bg-primary/20 rounded-lg flex items-center justify-center mr-4"
+              >
                 <i class="fas fa-code text-primary text-xl"></i>
               </div>
               <h3 class="text-xl font-bold text-white">Web Development</h3>
@@ -432,34 +460,50 @@
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">HTML/CSS</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 90%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 90%"
+                  ></div>
                 </div>
               </div>
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">JavaScript</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 85%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 85%"
+                  ></div>
                 </div>
               </div>
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">React</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 75%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 75%"
+                  ></div>
                 </div>
               </div>
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">Tailwind CSS</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 88%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 88%"
+                  ></div>
                 </div>
               </div>
             </div>
           </div>
 
           <!-- Backend & Database -->
-          <div class="bg-card p-6 rounded-xl border border-slate-700 hover:border-primary/50 transition-all w-full md:w-[calc(50%-1rem)] lg:w-[calc(33.33%-1.34rem)]">
+          <div
+            class="bg-card p-6 rounded-xl border border-slate-700 hover:border-primary/50 transition-all w-full md:w-[calc(50%-1rem)] lg:w-[calc(33.33%-1.34rem)]"
+          >
             <div class="flex items-center mb-4">
-              <div class="w-12 h-12 bg-primary/20 rounded-lg flex items-center justify-center mr-4">
+              <div
+                class="w-12 h-12 bg-primary/20 rounded-lg flex items-center justify-center mr-4"
+              >
                 <i class="fas fa-database text-primary text-xl"></i>
               </div>
               <h3 class="text-xl font-bold text-white">Backend & Database</h3>
@@ -468,34 +512,50 @@
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">Firebase</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 90%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 90%"
+                  ></div>
                 </div>
               </div>
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">REST APIs</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 85%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 85%"
+                  ></div>
                 </div>
               </div>
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">SQLite</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 80%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 80%"
+                  ></div>
                 </div>
               </div>
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">Node.js</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 70%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 70%"
+                  ></div>
                 </div>
               </div>
             </div>
           </div>
 
           <!-- Tools & Technologies -->
-          <div class="bg-card p-6 rounded-xl border border-slate-700 hover:border-primary/50 transition-all w-full md:w-[calc(50%-1rem)] lg:w-[calc(33.33%-1.34rem)]">
+          <div
+            class="bg-card p-6 rounded-xl border border-slate-700 hover:border-primary/50 transition-all w-full md:w-[calc(50%-1rem)] lg:w-[calc(33.33%-1.34rem)]"
+          >
             <div class="flex items-center mb-4">
-              <div class="w-12 h-12 bg-primary/20 rounded-lg flex items-center justify-center mr-4">
+              <div
+                class="w-12 h-12 bg-primary/20 rounded-lg flex items-center justify-center mr-4"
+              >
                 <i class="fas fa-tools text-primary text-xl"></i>
               </div>
               <h3 class="text-xl font-bold text-white">Tools & Technologies</h3>
@@ -504,34 +564,50 @@
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">Git/GitHub</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 90%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 90%"
+                  ></div>
                 </div>
               </div>
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">VS Code</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 95%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 95%"
+                  ></div>
                 </div>
               </div>
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">Android Studio</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 85%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 85%"
+                  ></div>
                 </div>
               </div>
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">Figma</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 75%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 75%"
+                  ></div>
                 </div>
               </div>
             </div>
           </div>
 
           <!-- Cloud & DevOps -->
-          <div class="bg-card p-6 rounded-xl border border-slate-700 hover:border-primary/50 transition-all w-full md:w-[calc(50%-1rem)] lg:w-[calc(33.33%-1.34rem)]">
+          <div
+            class="bg-card p-6 rounded-xl border border-slate-700 hover:border-primary/50 transition-all w-full md:w-[calc(50%-1rem)] lg:w-[calc(33.33%-1.34rem)]"
+          >
             <div class="flex items-center mb-4">
-              <div class="w-12 h-12 bg-primary/20 rounded-lg flex items-center justify-center mr-4">
+              <div
+                class="w-12 h-12 bg-primary/20 rounded-lg flex items-center justify-center mr-4"
+              >
                 <i class="fas fa-cloud text-primary text-xl"></i>
               </div>
               <h3 class="text-xl font-bold text-white">Cloud & DevOps</h3>
@@ -540,25 +616,37 @@
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">Firebase Hosting</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 85%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 85%"
+                  ></div>
                 </div>
               </div>
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">Google Cloud</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 70%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 70%"
+                  ></div>
                 </div>
               </div>
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">Play Store</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 90%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 90%"
+                  ></div>
                 </div>
               </div>
               <div class="flex items-center justify-between">
                 <span class="text-slate-300 text-sm">App Store</span>
                 <div class="w-24 sm:w-32 bg-slate-700 rounded-full h-2 ml-2">
-                  <div class="bg-primary h-2 rounded-full" style="width: 80%"></div>
+                  <div
+                    class="bg-primary h-2 rounded-full"
+                    style="width: 80%"
+                  ></div>
                 </div>
               </div>
             </div>
@@ -569,7 +657,7 @@
 
     <!-- Projects Section -->
     <section id="projects" class="py-12 md:py-20 bg-darker/50">
-      <div class="container mx-auto px-3 sm:px-6 max-w-6xl">
+      <div class="container mx-auto px-3 sm:px-6 max-w-7xl">
         <div class="text-center mb-10 md:mb-16">
           <h2 class="text-3xl font-bold text-white mb-4">Projects</h2>
           <p class="text-slate-400 max-w-2xl mx-auto">
@@ -728,7 +816,7 @@
 
     <!-- Contact Section -->
     <section id="contact" class="py-12 md:py-20">
-      <div class="container mx-auto px-3 sm:px-6 max-w-6xl">
+      <div class="container mx-auto px-3 sm:px-6 max-w-7xl">
         <div class="max-w-3xl mx-auto">
           <div class="text-center mb-10 md:mb-16">
             <h2 class="text-3xl font-bold text-white mb-4">Get In Touch</h2>
@@ -859,7 +947,7 @@
 
     <!-- Footer -->
     <footer class="bg-darker border-t border-slate-800 py-12">
-      <div class="container mx-auto px-3 sm:px-6 max-w-6xl">
+      <div class="container mx-auto px-3 sm:px-6 max-w-7xl">
         <div class="grid grid-cols-1 md:grid-cols-4 gap-8 mb-8">
           <div class="col-span-1 md:col-span-2">
             <span class="text-2xl font-bold text-white"
@@ -929,10 +1017,14 @@
             © 2026 Nanday Das. All rights reserved.
           </p>
           <div class="flex gap-6 text-sm font-medium text-slate-400">
-            <a href="https://nandaydas.in/pages/privacy-policy" class="hover:text-primary transition-colors"
+            <a
+              href="https://nandaydas.in/pages/privacy-policy"
+              class="hover:text-primary transition-colors"
               >Privacy Policy</a
             >
-            <a href="https://nandaydas.in/pages/terms-of-service" class="hover:text-primary transition-colors"
+            <a
+              href="https://nandaydas.in/pages/terms-of-service"
+              class="hover:text-primary transition-colors"
               >Terms of Service</a
             >
           </div>
