Update footer links to point to absolute URLs, added robots.txt and sitemap.xml

--- a/footer.html
+++ b/footer.html
@@ -16,22 +16,22 @@
             <h3 class="text-white font-semibold mb-4">Quick Links</h3>
             <ul class="space-y-2 text-sm text-slate-400">
               <li>
-                <a href="#home" class="hover:text-primary transition-colors"
+                <a href="https://nandaydas.in/#home" class="hover:text-primary transition-colors"
                   >Home</a
                 >
               </li>
               <li>
-                <a href="#about" class="hover:text-primary transition-colors"
+                <a href="https://nandaydas.in/#about" class="hover:text-primary transition-colors"
                   >About</a
                 >
               </li>
               <li>
-                <a href="#projects" class="hover:text-primary transition-colors"
+                <a href="https://nandaydas.in/#projects" class="hover:text-primary transition-colors"
                   >Projects</a
                 >
               </li>
               <li>
-                <a href="#contact" class="hover:text-primary transition-colors"
+                <a href="https://nandaydas.in/#contact" class="hover:text-primary transition-colors"
                   >Contact</a
                 >
               </li>
