--- a/404.html
+++ b/404.html
@@ -130,142 +130,14 @@
     ></div>
 
     <!-- Navigation -->
-    <nav
-      class="fixed w-full z-50 top-0 start-0 border-b border-slate-800 bg-dark/80 backdrop-blur-md"
-    >
-      <div
-        class="max-w-7xl flex flex-wrap items-center justify-between mx-auto px-3 py-4 sm:px-4"
-      >
-        <a
-          href="index.html"
-          class="flex items-center space-x-2 rtl:space-x-reverse flex-shrink-0"
-        >
-          <span
-            class="self-center text-lg sm:text-xl md:text-2xl font-bold text-white"
-            >nandaydas<span class="text-primary">.in</span></span
-          >
-        </a>
-        <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-          <a
-            href="index.html#contact"
-            class="hidden md:inline-block text-white bg-primary hover:bg-blue-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center transition-all"
-            >Hire Me</a
-          >
-          <button
-            data-collapse-toggle="navbar-sticky"
-            type="button"
-            id="menu-toggle"
-            class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-400 rounded-lg md:hidden hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-gray-600"
-            aria-controls="navbar-sticky"
-            aria-expanded="false"
-          >
-            <span class="sr-only">Open main menu</span>
-            <svg
-              class="w-5 h-5"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 17 14"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M1 1h15M1 7h15M1 13h15"
-              />
-            </svg>
-          </button>
-        </div>
-        <div
-          class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
-          id="navbar-sticky"
-        >
-          <ul
-            class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-700 rounded-lg bg-card md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent"
-          >
-            <li>
-              <a
-                href="index.html#home"
-                class="block py-2 px-3 text-gray-300 rounded hover:bg-gray-700 md:hover:bg-transparent md:hover:text-primary md:p-0 transition-colors"
-                >Home</a
-              >
-            </li>
-            <li>
-              <a
-                href="index.html#about"
-                class="block py-2 px-3 text-gray-300 rounded hover:bg-gray-700 md:hover:bg-transparent md:hover:text-primary md:p-0 transition-colors"
-                >About</a
-              >
-            </li>
-            <li>
-              <a
-                href="index.html#skills"
-                class="block py-2 px-3 text-gray-300 rounded hover:bg-gray-700 md:hover:bg-transparent md:hover:text-primary md:p-0 transition-colors"
-                >Skills</a
-              >
-            </li>
-            <li>
-              <a
-                href="index.html#projects"
-                class="block py-2 px-3 text-gray-300 rounded hover:bg-gray-700 md:hover:bg-transparent md:hover:text-primary md:p-0 transition-colors"
-                >Projects</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Mobile Menu Overlay -->
-    <div
-      id="mobile-menu"
-      class="fixed inset-0 z-40 bg-darker bg-opacity-95 hidden flex flex-col items-center justify-center space-y-8 md:hidden transition-opacity duration-300"
-    >
-      <button
-        id="close-menu"
-        class="absolute top-6 right-6 text-gray-400 hover:text-white"
-      >
-        <svg
-          class="w-8 h-8"
-          fill="none"
-          stroke="currentColor"
-          viewBox="0 0 24 24"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M6 18L18 6M6 6l12 12"
-          ></path>
-        </svg>
-      </button>
-      <a
-        href="index.html#home"
-        class="text-2xl font-bold text-white hover:text-primary mobile-link"
-        >Home</a
-      >
-      <a
-        href="index.html#about"
-        class="text-2xl font-bold text-white hover:text-primary mobile-link"
-        >About</a
-      >
-      <a
-        href="index.html#skills"
-        class="text-2xl font-bold text-white hover:text-primary mobile-link"
-        >Skills</a
-      >
-      <a
-        href="index.html#projects"
-        class="text-2xl font-bold text-white hover:text-primary mobile-link"
-        >Projects</a
-      >
-      <a
-        href="index.html#contact"
-        class="text-2xl font-bold text-white hover:text-primary mobile-link"
-        >Contact</a
-      >
-    </div>
+<nav class="fixed top-0 w-full z-50 bg-dark/90 backdrop-blur border-b border-slate-800">
+  <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
+    <!-- Logo -->
+    <a href="index.html" class="text-xl font-bold text-white">
+      nandaydas<span class="text-primary">.in</span>
+    </a>
+  </div>
+</nav>
 
     <!-- 404 Error Section -->
     <section class="min-h-screen flex items-center justify-center pt-16">
@@ -319,36 +191,12 @@
     </section>
 
     <!-- Footer -->
-    <div id="footer"></div>
-    <script>
-        fetch("footer.html")
-        .then(res => res.text())
-        .then(data => {
-            document.getElementById("footer").innerHTML = data;
-            lucide.createIcons(); // render icons AFTER footer loads
-        });
-    </script>
+  <footer class="border-t border-slate-800 py-6 text-center text-slate-400">
+    © 2026 Nanday Das. All rights reserved.
+  </footer>
 
     <!-- JavaScript for Mobile Menu and Interactions -->
     <script>
-      // Mobile menu toggle functionality
-      const menuToggle = document.getElementById("menu-toggle");
-      const mobileMenu = document.getElementById("mobile-menu");
-      const closeMenu = document.getElementById("close-menu");
-      const mobileLinks = document.querySelectorAll(".mobile-link");
-
-      function toggleMenu() {
-        mobileMenu.classList.toggle("hidden");
-        mobileMenu.classList.toggle("flex");
-      }
-
-      menuToggle.addEventListener("click", toggleMenu);
-      closeMenu.addEventListener("click", toggleMenu);
-
-      // Close menu when clicking a link
-      mobileLinks.forEach((link) => {
-        link.addEventListener("click", toggleMenu);
-      });
 
       // Sticky Navbar background change on scroll
       const navbar = document.querySelector("nav");
